<resources>
    <string name="app_name">baroder</string>
    <string name="title_activity_bottom_navigation_fragment">BottomNavigationFragment</string>
    <string name="home">홈</string>
    <string name="store">매장</string>
    <string name="nav_coupon">쿠폰</string>
    <string name="nav_point">포인트</string>
    <string name="shop">상점</string>
    <string name="qr">출입QR</string>
    <string name="hello_baroder">안녕하세요.\n바로더 입니다.</string>
    <string name="qr_text">출입 QR코드</string>
    <string name="qr_info_text">QR코드를 외부출입기에\n10~15cm 간격을 두고 스캔해주세요!</string>
    <string name="barcode_info">쿠폰을 바코드 리더기에 스캔해주세요!\n스캔이 안된다면 바코드 번호를 직접 입력해주세요.</string>
    <string name="best_item">BEST 인기상품</string>
    <string name="edit_button_text">편집</string>
    <string name="recently_store_text">최근 방문매장</string>
    <string name="home_more_button">더보기</string>
    <string name="home_recommend_text">이런 매장은 어때요?</string>
    <string name="recently_visited_store_selected">단골매장 선택</string>
    <string name="recently_visited_store_change">단골매장 순서변경</string>
    <string name="onboarding_start">시작하기</string>
    <string name="onboarding_skip">SKIP</string>
    <string name="onboarding_next">다음</string>
    <string name="visitor_information_text">로그인 후 출입 QR을 사용할 수 있습니다.</string>
    <string name="qr_login_text">로그인 하기</string>
    <string name="not_coupon">아직 사용 가능한 쿠폰이 없어요\n해당 매장의 포인트를 쿠폰으로 바꿔보세요!</string>
    <string name="check_my_point">내 포인트 확인</string>
    <string name="confirm">확인</string>
    <string name="browse_store">매장 둘러보기</string>
    <string name="not_recently_visited_store">최근 방문한 매장이 없어요\n내 주변 매장을 방문하고 포인트를 쌓아보세요!</string>
    <string name="login_pls">로그인을 해주세요</string>
    <string name="mypage_baroder_learn_more">바로더 알아보기</string>
    <string name="mypage_favorite_store">즐겨찾기 매장</string>
    <string name="my_coupon">MY 쿠폰</string>
    <string name="terms_of_use">이용약관</string>
    <string name="app_version">앱 버전</string>
    <string name="coupon_noti_text">전환한 쿠폰은 해당 매장에서만 사용 가능합니다.</string>
    <string name="coupon_count">보유쿠폰 : 2개</string>
    <string name="my_point">MY 포인트</string>
    <string name="point_noti">포인트는 1년 동안 사용하지 않을 경우 소멸됩니다.</string>
    <string name="shop_noti">적립한 포인트를 쿠폰으로 전환해 보세요!</string>
    <string name="point_minimum_noti">최소 500p부터 쿠폰 전환 가능</string>
    <string name="point_details">상세내역</string>
    <string name="point_coupon_convert">쿠폰전환</string>
    <string name="point_details_accumulate">적립</string>
    <string name="not_visited_store">최근 방문한 매장이 없어요\n내 주변 매장을 방문하고 포인트를 쌓아보세요!</string>
    <string name="store_take_a_tour">매장 둘러보기</string>
    <string name="favorite_store_setting">단골설정</string>
    <string name="not_favorite_store_list">아직 즐겨찾기한 매장이 없어요\n마음에 드는 매장을 즐겨찾기 해주세요!</string>
    <string name="regular_noti">아직 단골로 등록한 매장이 없어요.\n매장을 즐겨찾기 한 후 단골로 설정해보세요!</string>
    <string name="sign_info_text">포인트 적립부터 할인 쿠폰까지\n무인매장 앱테크의 시작 바로더</string>
    <string name="sign_in">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="id">아이디</string>
    <string name="new_pwd">새 비밀번호</string>
    <string name="name">이름</string>
    <string name="sign_in_password">비밀번호</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_pwd">비밀번호 찾기</string>
    <string name="agreement_info_text">서비스 이용 약관에\n동의해 주세요:)</string>
    <string name="all_agreement">전체동의</string>
    <string name="please_phone_num_verification">휴대폰 번호를 인증해주세요.</string>
    <string name="phone_number">휴대폰 번호</string>
    <string name="auth_verification">인증받기</string>
    <string name="auth_number">인증번호</string>
    <string name="input_auth_number">인증번호를 입력해주세요</string>
    <string name="next">다음</string>
    <string name="birthday">생년월일</string>
    <string name="please_input_member_info">회원가입에 꼭 필요한 정보를\n입력해주세요.</string>
    <string name="please_input_id">아이디를 입력해주세요</string>
    <string name="please_input_pwd">영문, 숫자, 특수문자를 포함한 8~15자를 입력해주세요</string>
    <string name="please_input_name">이름을 입력해주세요.</string>
    <string name="please_input_birthday">생년월일 6자리</string>
    <string name="asterisk">*</string>
    <string name="asterisk_group">* * * * * *</string>
    <string name="complete">완료</string>
    <string name="signup_complete">회원가입 완료</string>
    <string name="complete_sign_up">회원가입이\n완료되었습니다.</string>
    <string name="complete_find_id">인증이 완료되었습니다.</string>
    <string name="find_user_id_sub_title">회원님의 휴대폰 번호로 등록 된 아이디 입니다.</string>
    <string name="sign_up_complete_sub_title">바로더 회원가입이 완료되었습니다.\n바로더로 매장별 포인트를 한꺼번에 관리해 보세요!</string>
    <string name="go_home">홈으로 가기</string>
    <string name="go_sign_in">로그인 하기</string>
    <string name="find_user_id_phone_number_verification_title">아이디를 찾으려면\n휴대폰 인증이 필요해요.</string>
    <string name="find_user_pwd_phone_number_verification_title">비밀번호를 찾으려면\n인증이 필요해요.</string>
    <string name="input_new_pwd">새로운 비밀번호를\n설정해주세요.</string>
    <string name="re_request">재요청</string>
    <string name="discount_coupon">할인 쿠폰</string>
    <string name="goods_name">상품명</string>
    <string name="use_to_store">사용할 가맹점</string>
    <string name="not_point">아직 사용 가능한 포인트가 없어요\n바로더 매장 방문 후 포인트를 적립해보세요</string>
    <string name="convert_content">전환 내용</string>
    <string name="store_name">매장명</string>
    <string name="points_before_conversion">전환 전 포인트</string>
    <string name="use_point">사용 포인트</string>
    <string name="points_after_conversion">전환 후 포인트</string>
    <string name="complete_convert_coupon">쿠폰 전환이\n완료되었습니다 :)</string>
    <string name="checkable_convert_coupon">전환된 쿠폰은 언제든 쿠폰함에서\n확인하실 수 있습니다.</string>
    <string name="check_in_coupon_box">쿠폰함에서 확인하기</string>
    <string name="back_home">홈으로 돌아가기</string>
    <string name="select_to_convert_coupon">전환할 쿠폰을\n선택해 주세요.</string>
    <string name="error_no_internet">인터넷 연결을 확인해주세요</string>
    <string name="error_timeout">타임아웃 에러</string>
    <string name="error_unknown">알 수 없는 에러입니다.</string>
    <string name="tilde">&#160;~&#160;</string>

</resources>