<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_menu_home_active" />

    <item
        android:id="@+id/nav_store"
        android:title="@string/store"
        android:icon="@drawable/ic_menu_store_disabled" />

    <item
        android:id="@+id/nav_coupon"
        android:title="@string/nav_coupon"
        android:icon="@drawable/ic_menu_store_disabled" />

    <item
        android:id="@+id/nav_point"
        android:title="@string/nav_point"
        android:icon="@drawable/ic_menu_point_disabled" />

    <item
        android:id="@+id/nav_shop"
        android:title="@string/nav_shop"
        android:icon="@drawable/ic_menu_shop_disabled" />

</menu>