<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:paddingTop="70dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/convert_coupon_title"
        style="@style/title_bold_31sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical"
        android:maxLines="2"
        android:text="@string/complete_convert_coupon"
        android:textColor="@color/primary_color_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/convert_coupon_sub_title"
        style="@style/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical|center"
        android:maxLines="2"
        android:text="@string/checkable_convert_coupon"
        android:textColor="@color/primary_color_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/convert_coupon_title" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/convert_coupon_complete_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_completed_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/convert_coupon_sub_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/convert_coupon_check_in_coupon_box_btn"
        style="@style/positive_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:text="@string/check_in_coupon_box"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@id/convert_coupon_complete_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/convert_coupon_back_home"
        style="@style/title_text_17sp"
        android:textColor="@color/primary_color_text"
        android:maxLines="1"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/convert_coupon_check_in_coupon_box_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/back_home"/>

</androidx.constraintlayout.widget.ConstraintLayout>