<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="60dp">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/sign_up_complete_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_cancel_icon"
        android:button="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sign_up_complete_title"
        style="@style/title_bold_31sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:layout_marginTop="14dp"
        android:textColor="@color/primary_color_text"
        app:layout_constraintTop_toBottomOf="@id/sign_up_complete_cancel_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center|center_vertical"
        android:text="@string/complete_sign_up"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sign_up_complete_sub_title"
        style="@style/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sign_up_complete_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_vertical|center"
        android:layout_marginTop="20dp"
        android:textColor="@color/primary_color_text"
        android:maxLines="2"
        android:text="@string/sign_up_complete_sub_title"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_join_completed"
        app:layout_constraintTop_toBottomOf="@id/sign_up_complete_sub_title"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_complete_go_home_btn"
        style="@style/positive_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/go_home"
        android:paddingVertical="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>