<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/find_pwd_verification_title"
        style="@style/title_bold_23sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:text="@string/input_new_pwd"
        android:textColor="@color/primary_color_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/find_pwd_verification_id_area"
        android:layout_width="0dp"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/find_pwd_verification_title">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/find_pwd_verification_id_text"
            style="@style/sub_text_13sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/new_pwd"
            android:textColor="@color/secondary_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/find_pwd_verification_id_layout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            app:boxStrokeColor="@color/box_stroke_color"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="0dp"
            app:helperTextEnabled="true"
            app:helperTextTextAppearance="@style/helper_text_appearance"
            app:helperTextTextColor="@color/warning_coral"
            app:hintEnabled="false"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/find_pwd_verification_id_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/find_pwd_verification_id_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/noto_sans"
                android:hint="@string/please_input_pwd"
                android:includeFontPadding="false"
                android:inputType="text"
                android:letterSpacing="-0.04"
                android:paddingVertical="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:textSize="15sp"
                app:layout_alignSelf="center" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/find_pwd_verification_complete_btn"
        style="@style/positive_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:backgroundTint="@color/button_enable"
        android:text="@string/complete"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>